--- a/api/package.json
+++ b/api/package.json
@@ -3,15 +3,19 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "generate": "drizzle-kit generate",
+    "local:migration": "wrangler d1 migrations apply web-clip-database --local",
+    "remote:migration": "wrangler d1 migrations apply web-clip-database --remote"
   },
   "dependencies": {
-    "@prisma/adapter-d1": "^6.11.1",
-    "@prisma/client": "^6.11.1",
-    "hono": "^4.8.4",
-    "prisma": "^6.11.1"
+    "dotenv": "^17.1.0",
+    "drizzle-orm": "^0.44.2",
+    "hono": "^4.8.4"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.3",
     "wrangler": "^4.4.0"
   }
 }
