--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,15 @@
     "remote:migration": "wrangler d1 migrations apply web-clip-database --remote"
   },
   "dependencies": {
+    "@hono/oauth-providers": "^0.8.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "dotenv": "^17.1.0",
     "drizzle-orm": "^0.44.2",
-    "hono": "^4.8.4"
+    "hono": "^4.8.4",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/node": "^24.0.12",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.3",
     "wrangler": "^4.4.0"
